--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,1 +1,1 @@
-{"meta":{"username":"yeddiyarim","repositoryName":"yeddiyarim.github.io","branch":"master"},"site":{"title":"SOmething, something","description":"Wau. MIau.","url":"https://yeddiyarim.github.io"},"socialnetwork":{},"theme":{"name":"Casper","url":"//yeddiyarim.github.io/themes/Casper"}}
+{"meta":{"username":"yeddiyarim","repositoryName":"yeddiyarim.github.io","branch":"master"},"site":{"title":"SOmething, something","description":"Wau. MIau.","url":"https://yeddiyarim.github.io"},"socialnetwork":{},"theme":{"name":"Roon","url":"//yeddiyarim.github.io/themes/Roon"}}
