Update configuration file

--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,1 +1,1 @@
-{"meta":{"username":"yeddiyarim","repositoryName":"yeddiyarim.github.io","branch":"master"},"site":{"title":"SOmething, something","description":"Wau. MIau.","url":"https://yeddiyarim.github.io"},"socialnetwork":{},"theme":{"name":"ichi","url":"//yeddiyarim.github.io/themes/ichi"}}
+{"meta":{"username":"yeddiyarim","repositoryName":"yeddiyarim.github.io","branch":"master"},"site":{"title":"SOmething, something","description":"Wau. MIau.","url":"https://yeddiyarim.github.io"},"socialnetwork":{},"theme":{"name":"uno-zen","url":"//yeddiyarim.github.io/themes/uno-zen"}}
